<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OpretListe" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tVNavn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tVNavnTekst" />

        <EditText
            android:id="@+id/eTNavn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tVNavn"
            android:inputType="textCapSentences" />

        <Button
            android:id="@+id/btnTilf"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eTNavn"
            android:text="@string/btnTilfTekst" />

        <Button
            android:id="@+id/btnSort"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@+id/btnTilf"
            android:text="@string/btnSortTekst" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_above="@+id/btnGemListe" >

		<ListView
		    android:id="@+id/lVTlft"
		    android:layout_width="fill_parent"
		    android:layout_height="match_parent" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnGemListe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnGemListeTekst" />

    <Button
        android:id="@+id/btnAnnList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btnAnnList" />

</RelativeLayout>